# cppTriColor

./: CMakeLists.txt  README.md  TriColor  main.cpp
